- Fixed firing console height jump.

--- a/assets/sass/_components.scss
+++ b/assets/sass/_components.scss
@@ -91,6 +91,10 @@
   flex-grow: 1;
 }
 
+#consoleBottomSection {
+  flex: 1;
+}
+
 #consoleMidSection,
 #consoleBottomSection {
   text-shadow: 0 0 3px $mustard-yellow;
