--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -3,7 +3,7 @@ body {
 }
 
 footer {
-  position: absolute;
+  position: fixed;
   bottom: 0;
   width: 100%;
   height: 2.5rem;
@@ -173,6 +173,10 @@ h2 {
 
 #consoleBottomSection > div {
   flex-grow: 1;
+}
+
+#consoleBottomSection {
+  flex: 1;
 }
 
 #consoleMidSection,
